syntax = "proto3";
package extractor;
option go_package = "github.com/docbull/ethereum-block-extractor/extractor/proto";

message BlockInfo {
    bytes parent_hash = 1;
    bytes uncle_hash = 2;
    bytes coinbase = 3;
    bytes root = 4;
    bytes tx_hash = 5;
    bytes receipt_hash = 6;
    bytes bloom = 7;
    uint64 difficulty = 8;
    uint64 number = 9;
    uint64 gas_limit = 10;
    uint64 gas_used = 11;
    uint64 time = 12;
    bytes extra = 13;
    bytes mix_digest = 14;
    uint64 nonce = 15;
    uint64 size = 16;
}

enum StatusCode {
    UNKNOWN = 0;
    OK = 1;
    FAILED = 2;
}

message Status {
    StatusCode code = 1;
}
